Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,8 @@
     }
    ],
    "source": [
-    "total_reviews = sum(review_count)\n",
+    "total_reviews = 0\n",
+    "    for re\n",
     "total_reviews # 3420"
    ]
   },
