--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,8 @@
    ],
    "source": [
     "total_reviews = 0\n",
-    "    for re\n",
+    "    for review in review_counts:\n",
+    "        \n",
     "total_reviews # 3420"
    ]
   },
