--- a/index.ipynb
+++ b/index.ipynb
@@ -193,25 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'review_count' is not defined",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-9-4a9f34421417>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-dc47f496fa38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtotal_reviews\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreview_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtotal_reviews\u001b[0m \u001b[0;31m# 3420\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'review_count' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4a9f34421417>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for review in review_counts:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "total_reviews = 0\n",
     "    for review in review_counts:\n",
-    "        total_reviews+=\n",
+    "        total_reviews=+review\n",
     "total_reviews # 3420"
    ]
   },
