--- a/index.ipynb
+++ b/index.ipynb
@@ -193,22 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-9-4a9f34421417>, line 2)",
+     "evalue": "unexpected indent (<ipython-input-10-2e3d987dd365>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4a9f34421417>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for review in review_counts:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-2e3d987dd365>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for review in review_counts:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "total_reviews = 0\n",
     "    for review in review_counts:\n",
-    "        total_reviews=+review\n",
+    "        total_reviews+=review\n",
     "total_reviews # 3420"
    ]
   },
