--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,8 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    for restaurant in \n",
+    "    for restaurant in restuarants:\n",
+    "        \n",
     "    pass"
    ]
   },
