--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "def map_format_restaurants(restaurants):\n",
     "    for restaurant in restuarants:\n",
-    "        \n",
+    "        price=f\n",
     "    pass"
    ]
   },
