Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
     "def map_format_restaurants(restaurants):\n",
     "    for restaurant in restuarants:\n",
     "        format_restaurant(restaurant)\n",
-    "    pass"
+    "    return resta"
    ]
   },
   {
