Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,9 +269,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    for restaurant in restuarants:\n",
-    "        format_restaurant(restaurant)\n",
-    "    return restaurants"
+    "    return list(map(fo))"
    ]
   },
   {
