--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list()"
+    "    return list(filter(lambda restaurant))"
    ]
   },
   {
