--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price']<=1, restaurant))"
+    "    return list(filter(lambda restaurant: restaurant['price']<=1, restaurants))"
    ]
   },
   {
