--- a/index.ipynb
+++ b/index.ipynb
@@ -462,7 +462,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lam))"
+    "    return list(filter(lambda restaurant: restaurant))"
    ]
   },
   {
